Add hover states to the menu

--- a/deploy/htdocs/version/src/inc/script/app/component/menu/menu.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/menu/menu.html
@@ -4,19 +4,29 @@
 			<div class="scroll-inner" data-content-inner>
 				<ul class="menu-items">
 					<li class="menu-item">
-						<a href="#">Home</a>
+						<a class="main-link" href="#">Home</a>
+						<div class="subtitle">We offer advertising sollutions for <a href="#">Television</a>, <a
+							href="#">Design</a> and <a href="#">Creative services</a></div>
 					</li>
 					<li class="menu-item">
-						<a href="#">Advertising Sollutions</a>
+						<a class="main-link" href="#">Advertising Sollutions</a>
+						<div class="subtitle">We offer advertising sollutions for <a href="#">Television</a>, <a
+							href="#">Design</a> and <a href="#">Creative services</a></div>
 					</li>
 					<li class="menu-item">
-						<a href="#">Capabilities</a>
+						<a class="main-link" href="#">Capabilities</a>
+						<div class="subtitle">We offer advertising sollutions for <a href="#">Television</a>, <a
+							href="#">Design</a> and <a href="#">Creative services</a></div>
 					</li>
 					<li class="menu-item">
-						<a href="#">Markets Map</a>
+						<a class="main-link" href="#">Markets Map</a>
+						<div class="subtitle">We offer advertising sollutions for <a href="#">Television</a>, <a
+							href="#">Design</a> and <a href="#">Creative services</a></div>
 					</li>
 					<li class="menu-item">
-						<a href="#">Contact us</a>
+						<a class="main-link" href="#">Contact us</a>
+						<div class="subtitle">We offer advertising sollutions for <a href="#">Television</a>, <a
+							href="#">Design</a> and <a href="#">Creative services</a></div>
 					</li>
 				</ul>
 			</div>
