Add Close button..

--- a/deploy/htdocs/version/src/inc/script/app/component/button/button-menu/button-menu.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/button/button-menu/button-menu.html
@@ -1,5 +1,6 @@
 <button class="component-button-menu button" data-bind="css: size, tap: handleClick, attr: { title: title }">
 	<span class="text">{{label}}</span>
 	<span class="seperator"></span>
-	<span class="icon" data-bind="icon: 'hamburger-menu'"></span>
+	<span class="icon" data-bind="visible: !data.menuButtonActive(),  icon: 'hamburger-menu'"></span>
+	<span class="icon" data-bind="visible: data.menuButtonActive(), icon: 'cross'"></span>
 </button>
