--- a/deploy/htdocs/version/src/inc/script/app/component/header/header.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/header/header.html
@@ -29,6 +29,7 @@
 					title: 'Menu',
 					event: $root.handleMenuButtonClick.bind($root)
 				},
+				menuButtonActive: menuButtonActive,
 				size: $root.ButtonSize.LARGE,
 				disabled: $root.menuButtonDisabled
 			}
