--- a/deploy/htdocs/version/src/inc/style/component/button/_button-start-advertising.scss
+++ b/deploy/htdocs/version/src/inc/style/component/button/_button-start-advertising.scss
@@ -1,10 +1,9 @@
 .component-button-start-advertising {
 	$size: $sizeGrid * 10;
-
-	@include pos($sizeGrid * 20, 0, auto, auto);
+	@include pos(0, 0, auto, auto);
 	@include size($size / 2, $size);
 	position: absolute;
-	transform: translateY(-50%);
+	transform: translateY(0);
 	color: #fff;
 	text-align: right;
 
@@ -28,5 +27,16 @@
 		text-align: left;
 		margin-left: 1rem;
 		margin-right: $sizeGrid;
+	}
+
+	@include hover() {
+		.icon {
+			color: $colorWhite;
+
+			svg {
+				background: $colorSecondary;
+				border-radius: 100%;
+			}
+		}
 	}
 }
