--- a/deploy/htdocs/version/src/inc/script/app/component/button/button-main/button-main.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/button/button-main/button-main.html
@@ -1,3 +1,6 @@
 <a class="component-button-main button" data-bind="css: size, tap: handleClick, attr: { title: title }">
 	<span class="label">{{label}}</span>
+	<svg width="100%" height="100%" class="abs-fill" preserveAspectRatio="none">
+		<rect x="0.5" y="0.5" vector-effect="non-scaling-stroke"></rect>
+	</svg>
 </a>
