Added hover state to the call to actions blocks

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-image-call-to-actions/block-image-call-to-actions.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-image-call-to-actions/block-image-call-to-actions.html
@@ -37,6 +37,7 @@
 				<span class="text-wrapper">
 					<span class="pagination-number" data-bind="html: $root.StringUtils.padLeft(($index() + 1).toString(), 2, '0')"></span>
 					<h3 class="heading heading-03" data-bind="html: heading"></h3>
+					<p class="copy copy-01" data-bind="html: paragraph"></p>
 				</span>
 			</a>
 		</div>
