Add new margin system on blocks Add closing of the menu on page change

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-image-with-content/block-image-with-content.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-image-with-content/block-image-with-content.html
@@ -1,9 +1,4 @@
-<div class="component-block-image-with-content" data-bind="css: {
-		'windowed': data.windowed,
-		'cropped-image': data.croppedImage,
-		'left-aligned': data.alignment === $root.Alignment.LEFT,
-		'right-aligned': data.alignment === $root.Alignment.RIGHT
-	}">
+<div class="component-block-image-with-content">
 	<figure class="image">
 		<img data-bind="
 			attr: {
