--- a/deploy/htdocs/version/src/inc/script/app/component/menu/menu.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/menu/menu.html
@@ -4,12 +4,12 @@
 			<div class="scroll-inner" data-content-inner>
 				<ul class="menu-items">
 					<li class="menu-item">
-						<a class="main-link" href="#">Home</a>
+						<a class="main-link" data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: 'home'}]">Home</a>
 						<div class="subtitle">We offer advertising sollutions for <a href="#">Television</a>, <a
 							href="#">Design</a> and <a href="#">Creative services</a></div>
 					</li>
 					<li class="menu-item">
-						<a class="main-link" href="#">Advertising Sollutions</a>
+						<a class="main-link" data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: 'advertising-solutions'}]">Advertising Solutions</a>
 						<div class="subtitle">We offer advertising sollutions for <a href="#">Television</a>, <a
 							href="#">Design</a> and <a href="#">Creative services</a></div>
 					</li>
