Add a not found block Add the option for theming buttons

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-small-info/block-small-info.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-small-info/block-small-info.html
@@ -1,4 +1,4 @@
-<div class="component-block-small-info" data-bind="css: {'windowed': data.windowed}">
+<div class="component-block-small-info">
 
 	<div class="introduction">
 		<h4 class="heading heading-06" data-bind="html: data.heading"></h4>
