--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -33,3 +33,4 @@
 @import "block/block-persona-selector";
 @import "button/button-circle-arrow";
 @import "menu";
+@import "block/block-page-not-found";
