--- a/deploy/htdocs/version/src/inc/script/app/component/button/button-menu/button-menu.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/button/button-menu/button-menu.html
@@ -1,4 +1,4 @@
-<button class="component-button-menu button" data-bind="css: size, tap: handleClick, attr: { title: title }">
+<button class="component-button-menu button" data-bind="tap: handleClick, attr: { title: title }">
 	<span class="text">{{label}}</span>
 	<span class="seperator"></span>
 	<span class="icon" data-bind="visible: !data.menuButtonActive(),  icon: 'hamburger-menu'"></span>
