--- a/deploy/htdocs/version/src/inc/script/app/component/menu/menu.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/menu/menu.html
@@ -5,28 +5,28 @@
 				<ul class="menu-items">
 					<li class="menu-item">
 						<a class="main-link" data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: 'home'}]">Home</a>
-						<div class="subtitle">We offer advertising sollutions for <a href="#">Television</a>, <a
-							href="#">Design</a> and <a href="#">Creative services</a></div>
+						<div class="subtitle">We offer advertising sollutions for <a data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: 'advertising-solutions/television'}]">Television</a>, <a
+							data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: 'advertising-solutions/design'}]">Design</a> and <a data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: 'advertising-solutions/creative-services'}]">Creative services</a></div>
 					</li>
 					<li class="menu-item">
 						<a class="main-link" data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: 'advertising-solutions'}]">Advertising Solutions</a>
-						<div class="subtitle">We offer advertising sollutions for <a href="#">Television</a>, <a
-							href="#">Design</a> and <a href="#">Creative services</a></div>
+						<div class="subtitle">We offer advertising sollutions for <a data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: 'advertising-solutions/television'}]">Television</a>, <a
+							data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: 'advertising-solutions/design'}]">Design</a> and <a data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: 'advertising-solutions/creative-services'}]">Creative services</a></div>
 					</li>
 					<li class="menu-item">
 						<a class="main-link" href="#">Capabilities</a>
-						<div class="subtitle">We offer advertising sollutions for <a href="#">Television</a>, <a
-							href="#">Design</a> and <a href="#">Creative services</a></div>
+						<div class="subtitle">We offer advertising sollutions for <a data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: 'advertising-solutions/television'}]">Television</a>, <a
+							data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: 'advertising-solutions/design'}]">Design</a> and <a data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: 'advertising-solutions/creative-services'}]">Creative services</a></div>
 					</li>
 					<li class="menu-item">
-						<a class="main-link" href="#">Markets Map</a>
-						<div class="subtitle">We offer advertising sollutions for <a href="#">Television</a>, <a
-							href="#">Design</a> and <a href="#">Creative services</a></div>
+						<a class="main-link" data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: 'map'}]">Markets Map</a>
+						<div class="subtitle">We offer advertising sollutions for <a data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: 'advertising-solutions/television'}]">Television</a>, <a
+							data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: 'advertising-solutions/design'}]">Design</a> and <a data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: 'advertising-solutions/creative-services'}]">Creative services</a></div>
 					</li>
 					<li class="menu-item">
 						<a class="main-link" href="#">Contact us</a>
-						<div class="subtitle">We offer advertising sollutions for <a href="#">Television</a>, <a
-							href="#">Design</a> and <a href="#">Creative services</a></div>
+						<div class="subtitle">We offer advertising sollutions for <a data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: 'advertising-solutions/television'}]">Television</a>, <a
+							data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: 'advertising-solutions/design'}]">Design</a> and <a data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: 'advertising-solutions/creative-services'}]">Creative services</a></div>
 					</li>
 				</ul>
 			</div>
