Added secondary hero

--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -34,3 +34,4 @@
 @import "button/button-circle-arrow";
 @import "menu";
 @import "block/block-page-not-found";
+@import "block/block-hero-secondary";
