--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-secondary/block-hero-secondary.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-secondary/block-hero-secondary.html
@@ -1,11 +1,22 @@
-<div class="component-block-hero-main">
-	<img src="data/hero-main/slide-1.jpg" alt="" data-bind="">
+<div class="component-block-hero-secondary">
+	<figure class="abs-fill">
+		<img class="abs-fill-center" data-bind="
+			attr: {
+				alt: data.background.alt
+			},
+			image: {
+				queries: [
+					[$root.MediaQueries.X_SMALL, data.background.normal ],
+					[$root.MediaQueries.SMALL, data.background.small]
+				],
+				state: $root.deviceState()
+			}" />
+	</figure>
 	<div class="slide-content-wrapper abs-fill">
 		<div class="background-triangle"></div>
 		<div class="secondary-background-triangle"></div>
-		<div class="tertiary-background-triangle"></div>
 		<div class="slide-content">
-			<h2 class="heading heading-01" data-bind="html: data.heading"></h2>
+			<h2 class="heading heading-02" data-bind="html: data.heading"></h2>
 			<p class="copy copy-01" data-bind="html: data.paragraph"></p>
 			<!-- ko component: {
 				name: 'button/button-circle-arrow',
