Add secondary map component

--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -35,3 +35,5 @@
 @import "menu";
 @import "block/block-page-not-found";
 @import "block/block-hero-secondary";
+@import "block/block-hero-tertiary";
+@import "block/block-map-secondary";
