--- a/deploy/htdocs/version/src/inc/style/component/block/_block-hero-main.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-hero-main.scss
@@ -12,18 +12,21 @@
 			@include pos(50%, auto, auto, 0);
 			transform: translateY(-50%);
 			position: absolute;
+			pointer-events: none;
 		}
 
 		.secondary-background-triangle {
 			@include arrow(left, rgba($colorSecondary, .95), $sizeGrid * 12);
 			@include pos(50%, auto, auto, $sizeGrid * 14);
 			position: absolute;
+			pointer-events: none;
 		}
 
 		.tertiary-background-triangle {
 			@include arrow(right, rgba($colorWhite, .95), $sizeGrid * 6);
 			@include pos(75%, auto, auto, $sizeGrid * 20);
 			position: absolute;
+			pointer-events: none;
 		}
 
 	}
