Add progress bar to the secondary map

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-map-secondary/block-map-secondary.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-map-secondary/block-map-secondary.html
@@ -8,6 +8,9 @@
 			</div>
 			<div class="map-image">
 				<img class="abs-fill" src="data/map-secondary/map-background.png" alt="">
+				<div class="progress-bar">
+					<div class="progress" data-bind="style: {'width': '100%'}"></div>
+				</div>
 			</div>
 
 			<!-- ko if: data.link -->
