Add the path to purchase block

--- a/deploy/htdocs/version/src/inc/style/asset/_pagination-number.scss
+++ b/deploy/htdocs/version/src/inc/style/asset/_pagination-number.scss
@@ -2,6 +2,7 @@
 	font: 800 1.2rem / 1 $fontOpenSans;
 	position: relative;
 	color: $colorSecondary;
+	display: inline-block;
 	padding-bottom: $sizeGrid / 2;
 
 	&:after {
