--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -1,11 +1,27 @@
 [class^="component-block"] {
 	position: relative;
+	overflow: hidden;
+	z-index: 0;
 
+	/**
+	 * This means a block can overlap with another block therefore it get's overflow visible
+	 */
+	&.overlap {
+		z-index: 1;
+		overflow: visible;
+	}
+
+	/**
+	 * This means a block will have a border on both sides
+	 */
 	&.windowed {
 		border-right: $sizeGrid * 2 solid $colorWhite;
 		border-left: $sizeGrid * 2 solid $colorWhite;
 	}
 
+	/**
+	 * This is used for generating the spacing classes between the blocks
+	 */
 	@for $i from 0 through 5 {
 		&.margin-top-#{$i} {
 			margin-top: $sizeGrid * $i;
@@ -37,3 +53,4 @@
 @import "block/block-hero-secondary";
 @import "block/block-hero-tertiary";
 @import "block/block-map-secondary";
+@import "block/block-path-to-purchase";
