Add overrule overlap styling

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-map-secondary/block-map-secondary.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-map-secondary/block-map-secondary.html
@@ -1,5 +1,5 @@
 <div class="component-block-map-secondary">
-	<div class="aspect-ratio-wrapper">
+	<div class="aspect-ratio-wrapper overrule-overlap">
 		<div class="aspect-ratio-inner abs-fill">
 			<div class="map-content">
 				<h2 class="main-title heading heading-06" data-bind="html: data.heading"></h2>
