--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -1,7 +1,6 @@
 [class^="component-block"] {
 	position: relative;
 	overflow: hidden;
-	z-index: 0;
 
 	/**
 	 * This means a block can overlap with another block therefore it get's overflow visible
@@ -9,6 +8,15 @@
 	&.overlap {
 		z-index: 1;
 		overflow: visible;
+
+		~ [class^="component-block"] {
+
+			// Sometimes we want to overrule the z-index of the next block to be on top of the overlapping area
+			.overrule-overlap {
+				position: relative;
+				z-index: 2;
+			}
+		}
 	}
 
 	/**
