Add the small heading block

--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -62,3 +62,4 @@
 @import "block/block-hero-tertiary";
 @import "block/block-map-secondary";
 @import "block/block-path-to-purchase";
+@import "block/block-small-heading";
