--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -63,3 +63,4 @@
 @import "block/block-map-secondary";
 @import "block/block-path-to-purchase";
 @import "block/block-small-heading";
+@import "block/block-quote";
