Change padding on the image with content block

--- a/deploy/htdocs/version/src/inc/style/component/block/_block-image-with-content.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-image-with-content.scss
@@ -15,7 +15,7 @@
 		height: auto;
 		position: absolute;
 		background: #fff;
-		padding: $sizeGrid * 3 $sizeGrid * 3 $sizeGrid * 2 $sizeGrid * 3;
+		padding: $sizeGrid * 2;
 
 		&:after {
 			position: absolute;
