Add how to advertise block

--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -64,3 +64,4 @@
 @import "block/block-path-to-purchase";
 @import "block/block-small-heading";
 @import "block/block-quote";
+@import "block/block-how-to-advertise";
