Add the image carousel

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-tertiary/block-hero-tertiary.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-tertiary/block-hero-tertiary.html
@@ -5,8 +5,8 @@
 			},
 			image: {
 				queries: [
-					[$root.MediaQueries.X_SMALL, data.background.normal ],
-					[$root.MediaQueries.SMALL, data.background.small]
+					[$root.MediaQueries.X_SMALL, data.background.small ],
+					[$root.MediaQueries.SMALL, data.background.normal]
 				],
 				state: $root.deviceState()
 			}" />
