--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-image-call-to-actions/block-image-call-to-actions.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-image-call-to-actions/block-image-call-to-actions.html
@@ -8,8 +8,8 @@
 					attr: { alt: $data.background.alt },
 					image: {
 						queries: [
-							[ $root.MediaQueries.X_SMALL, $data.background.normal ],
-							[ $root.MediaQueries.SMALL, $data.background.small ]
+							[ $root.MediaQueries.X_SMALL, $data.background.small ],
+							[ $root.MediaQueries.SMALL, $data.background.normal ]
 						],
 						state: $root.deviceState()
 					}"/>
@@ -18,8 +18,8 @@
 					attr: { alt: $data.backgroundBlurred.alt },
 					image: {
 						queries: [
-							[ $root.MediaQueries.X_SMALL, $data.backgroundBlurred.normal ],
-							[ $root.MediaQueries.SMALL, $data.backgroundBlurred.small ]
+							[ $root.MediaQueries.X_SMALL, $data.backgroundBlurred.small ],
+							[ $root.MediaQueries.SMALL, $data.backgroundBlurred.normal ]
 						],
 						state: $root.deviceState()
 					}"/>
