--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-quote/block-quote.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-quote/block-quote.html
@@ -8,8 +8,8 @@
 				},
 				image: {
 					queries: [
-						[$root.MediaQueries.X_SMALL, data.image.normal ],
-						[$root.MediaQueries.SMALL, data.image.small]
+						[$root.MediaQueries.X_SMALL, data.image.small ],
+						[$root.MediaQueries.SMALL, data.image.normal]
 					],
 					state: $root.deviceState()
 				}" />
