--- a/deploy/htdocs/version/src/inc/style/asset/_asset.scss
+++ b/deploy/htdocs/version/src/inc/style/asset/_asset.scss
@@ -8,4 +8,7 @@
 @import 'helper';
 @import 'pagination-number';
 @import 'scrollbar';
+
+@import 'infinite-carousel/infinite-carousel';
+
 //@import 'grid';
