--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -65,3 +65,4 @@
 @import "block/block-small-heading";
 @import "block/block-quote";
 @import "block/block-how-to-advertise";
+@import "block/block-image-carousel";
