Tweak the image carousel to update on drag to avoid white gaps in the carousel

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-image-carousel/block-image-carousel.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-image-carousel/block-image-carousel.html
@@ -30,7 +30,12 @@
 				<div class="progress" data-bind="style: {'width': (($root.currentPage() / (data.slides.length - 1)) * 100) + '%'}"></div>
 			</div>
 			<ul data-bind="foreach: data.slides">
-				<li data-bind="html: $index() + 1, css: {'is-active': $index() === $root.currentPage()}"></li>
+				<li>
+					<button class="button pagination-button" data-bind="
+						html: $index() + 1,
+						css: {'is-active': $index() === $root.currentPage()},
+						tap: $root.handleOpenIndexClick.bind($root, $index())"></button>
+				</li>
 			</ul>
 		</div>
 	</div>
