--- a/deploy/htdocs/version/src/inc/style/component/button/_button-circle-arrow.scss
+++ b/deploy/htdocs/version/src/inc/style/component/button/_button-circle-arrow.scss
@@ -13,6 +13,10 @@
 	svg {
 		backface-visibility: hidden;
 
+		path {
+			fill: currentColor;
+		}
+
 		circle {
 			fill: transparent;
 			stroke: $colorWhite;
