--- a/deploy/htdocs/version/src/inc/style/component/button/_button-start-advertising.scss
+++ b/deploy/htdocs/version/src/inc/style/component/button/_button-start-advertising.scss
@@ -18,6 +18,10 @@
 	.icon {
 		@include size($sizeIcon);
 
+		path {
+			fill: currentColor;
+		}
+
 		circle {
 			fill: transparent;
 			stroke: $colorWhite;
