--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-how-to-advertise/block-how-to-advertise.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-how-to-advertise/block-how-to-advertise.html
@@ -13,7 +13,17 @@
 			} --><!-- /ko -->
 		</header>
 		<div class="advertisement-steps">
-
+			<ul class="steps" data-bind="foreach: data.steps">
+				<li class="step">
+					<figure>
+						<div class="icon abs-center" data-bind="icon: icon"></div>
+					</figure>
+					<aside>
+						<p class="copy copy-02" data-bind="html: heading"></p>
+						<p class="copy copy-01" data-bind="html: paragraph"></p>
+					</aside>
+				</li>
+			</ul>
 		</div>
 	</div>
 </div>
