Add BlogPost Add blockComponents in all-blocks.json

--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -66,3 +66,4 @@
 @import "block/block-quote";
 @import "block/block-how-to-advertise";
 @import "block/block-image-carousel";
+@import "block/block-blog-post";
